# open-marcus

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.backend.config.ts  vitest.config.ts
.factory/: init.sh  services.yaml
.pi/: taskplane.json
.pi-lens/: metrics-history.json  turn-state.json
.playwright-mcp/: page-2026-04-05T23-02-35-891Z.yml  page-2026-04-05T23-03-28-639Z.yml  page-2026-04-05T23-03-37-949Z.yml  page-2026-04-05T23-04-35-349Z.yml  page-2026-04-05T23-55-34-019Z.yml  page-2026-04-05T23-56-28-492Z.yml  page-2026-04-05T23-56-40-681Z.yml  page-2026-04-05T23-57-10-991Z.yml  page-2026-04-06T00-01-32-810Z.yml  page-2026-04-06T00-02-01-964Z.yml  page-2026-04-06T00-03-12-018Z.yml  page-2026-04-06T00-03-35-168Z.yml  page-2026-04-06T00-04-04-001Z.yml  page-2026-04-06T00-34-05-060Z.yml  page-2026-04-06T00-34-24-166Z.yml  page-2026-04-06T00-35-00-310Z.yml  page-2026-04-06T00-35-22-190Z.yml  page-2026-04-06T00-37-14-110Z.yml  page-2026-04-06T00-38-58-610Z.yml  page-2026-04-06T00-39-06-540Z.yml  page-2026-04-06T17-26-12-426Z.yml  page-2026-04-06T17-26-25-210Z.yml  page-2026-04-06T17-26-35-185Z.yml  page-2026-04-06T17-26-45-481Z.yml  page-2026-04-06T17-27-02-589Z.yml  page-2026-04-06T18-06-38-749Z.yml  page-2026-04-06T20-07-35-202Z.yml  page-2026-04-06T20-20-33-028Z.yml  page-2026-04-06T20-23-22-616Z.yml  (+43 more)
backend/: server.ts
(+608 files in other folders)
